--- a/form-components/package.json
+++ b/form-components/package.json
@@ -19,8 +19,8 @@
     "./nhforms/metadata/vite": "./src/nhforms/component-metadata.vite.ts"
   },
   "peerDependencies": {
-    "react": "^18.0.0",
-    "react-dom": "^18.0.0",
+    "react": "^18.0.0 || ^19.0.0",
+    "react-dom": "^18.0.0 || ^19.0.0",
     "@fluentui/react": "^8.0.0",
     "@babel/standalone": "^7.0.0",
     "immer": "^9.0.0 || ^10.0.0 || ^11.0.0",
@@ -30,8 +30,8 @@
     "@fluentui/react-icons": "^2.0.0"
   },
   "devDependencies": {
-    "@types/react": "^18.2.0",
-    "@types/react-dom": "^18.2.0",
+    "@types/react": "^19.0.0",
+    "@types/react-dom": "^19.0.0",
     "typescript": "^5.3.0"
   }
 }
