--- a/form-engine-core/package.json
+++ b/form-engine-core/package.json
@@ -14,12 +14,12 @@
     "./runtime": "./src/runtime/index.ts"
   },
   "peerDependencies": {
-    "react": "^18.0.0",
+    "react": "^18.0.0 || ^19.0.0",
     "@babel/standalone": "^7.0.0",
     "immer": "^9.0.0 || ^10.0.0 || ^11.0.0"
   },
   "devDependencies": {
-    "@types/react": "^18.2.0",
+    "@types/react": "^19.0.0",
     "typescript": "^5.3.0"
   }
 }
