--- a/form-engine-mois/package.json
+++ b/form-engine-mois/package.json
@@ -11,7 +11,7 @@
     "./context": "./src/context/index.ts"
   },
   "peerDependencies": {
-    "react": "^18.0.0",
+    "react": "^18.0.0 || ^19.0.0",
     "@fluentui/react": "^8.0.0",
     "@mois/form-engine-core": "workspace:*",
     "immer": "^9.0.0 || ^10.0.0 || ^11.0.0"
@@ -20,7 +20,7 @@
     "@fluentui/react-icons": "^2.0.0"
   },
   "devDependencies": {
-    "@types/react": "^18.2.0",
+    "@types/react": "^19.0.0",
     "typescript": "^5.3.0"
   }
 }
