--- a/form-engine-nhforms/package.json
+++ b/form-engine-nhforms/package.json
@@ -9,13 +9,13 @@
     ".": "./src/index.ts"
   },
   "peerDependencies": {
-    "react": "^18.0.0",
+    "react": "^18.0.0 || ^19.0.0",
     "@babel/standalone": "^7.0.0",
     "@mois/form-engine-core": "workspace:*",
     "@mois/form-engine-mois": "workspace:*"
   },
   "devDependencies": {
-    "@types/react": "^18.2.0",
+    "@types/react": "^19.0.0",
     "typescript": "^5.3.0"
   }
 }
